remove extra file and add accuracy print statement

--- a/scripts/train_test_loop_shirley.ipynb
+++ b/scripts/train_test_loop_shirley.ipynb
@@ -148,6 +148,49 @@
     "os.system(cmd)\n",
     "print(\"Evaluation finished!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def analyze_predictions(output_file):\n",
+    "    df = pd.read_csv(output_file)\n",
+    "    \n",
+    "    overall_avg = df['trial_acc'].mean()\n",
+    "    print(f\"Overall average trial accuracy: {overall_avg:.4f}\")\n",
+    "\n",
+    "    # session_avg = df.groupby('session')['trial_acc'].mean()\n",
+    "    # print(\"\\nAverage accuracy per session:\")\n",
+    "    # print(session_avg)\n",
+    "\n",
+    "    # Calculate AGGREGATE PER\n",
+    "    total_edit_distance = 0\n",
+    "    total_phoneme_length = 0\n",
+    "    for index, row in df.iterrows():\n",
+    "        pred_seq = row['true_phoneme'].split('-')\n",
+    "        true_seq = row['true_phoneme'].split('-')\n",
+    "\n",
+    "        ed = row['trial_ed']\n",
+    "        true_len = len(true_seq)\n",
+    "        \n",
+    "        total_edit_distance += ed\n",
+    "        total_phoneme_length += true_len\n",
+    "            \n",
+    "    aggregate_per = total_edit_distance / total_phoneme_length\n",
+    "    print(f\"Aggregate Phoneme Error Rate (PER): {aggregate_per:.4f}\")\n",
+    "        \n",
+    "    avg_loss = df['trial_ctc_loss'].mean()\n",
+    "    print(f\"Average Validation Loss: {avg_loss:.4f}\")\n",
+    "\n",
+    "# Open the csv and perform some analysis on it\n",
+    "output_file = \"/kaggle/working/nejm-brain-to-text/model_training/output/phoneme_predictions_20251105_065010.csv\"\n",
+    "df = pd.read_csv(output_file)\n",
+    "df.head()\n",
+    "analyze_predictions(output_file)"
+   ]
   }
  ],
  "metadata": {
